# thoughts_in_c

./: CMakeLists.txt  README.md
fast_rgba_to_bgra/: CMakeLists.txt  fast_rgba_to_bgra.c
usbmuxd_list/: CMakeLists.txt  usbmuxd_list.c
usbmuxd_monitor/: CMakeLists.txt  usbmuxd_monitor.c
